================================================================================
CHANGELOG
================================================================================

0.3.7.4
	* Moved FluidSynth.py back to fluidsynth.py
	* Added pyFluidSynth module to mingus.
	* Removed enable_reverb and disable_reverb from fluidsynth.
	* Updated FluidSynth unittests.

0.3.7.3
	* Replaced fluidsynth.py and MidiSequencer.py by the new FluidSynth 
	module which makes use of the pyFluidSynth bindings. This means that you
	don't have to start a server by hand anymore and that you can have more 
	control over the audio and soundfonts, since fluidsynth gets loaded 
	dynamically. A general purpose sequencer will be added later.


0.3.7.2
	* Started on MusicXML implementation
	* Fixed bug in setup script found and reported by namin:
	http://groups.google.com/group/mingus-python/t/ace3be8d50061df0

0.3.7.1
	* Added from_int to Note
	* Added self.bytes_read to the MidiFile parser to get better debugging.

0.3.7.0 
	* Updated examples to use mingus.midi instead of mingus.extra

0.3.6.5
	* Fixed bug in parse_midi_event. Program change and channel aftertouch 
	MIDI events only have one parameter instead of two. 
	* Added an exception for illegal events.

0.3.6.4
	* Instruments get succesfully set when loading a midi file.
	* Last set tempo will get returned as well, until we have a better solution
	(eg. a track containing only tempo changes)
	* To set the channel and the velocity off a Note. Use Note.channel and 
	Note.velocity instead of the dynamics dictionary.

0.3.6.3
	* Removed channel parameters from the MidiFileOut and MidiTrack functions.
	The channel a note should be played on can now be set in Note.dynamics["channel"]

0.3.6.2
	* Enhanced MIDI file parsing.

0.3.6.1
	* Parsing of a Midi file works in some cases. Still very bugy.
	* Remove is_valid_duration from Bar, because it prevents using floating 
	point numbers, which you need when representing complex durations.

0.3.6.0